--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/GuYun-D/e-commerce-data-monitoring#readme",
   "dependencies": {
-    "koa": "^2.12.0"
+    "koa": "^2.12.0",
+    "ws": "^7.4.5"
   }
 }
